deploy/k8s/infra/iam-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cuba-iam
  labels:
    istio-injection: enabled
